...
            android:id="@+id/detail_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/step_description_text_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="left|top"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toTopOf="@+id/previous_button"
...
