...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.RecipesFragment"
    tools:showIn="@layout/activity_recipes">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/recycler_view_left_margin"
        android:layout_marginRight="@dimen/recycler_view_right_margin"
        android:layout_marginTop="@dimen/recycler_view_margin_top"
        app:layoutManager="@string/recipes_layout_manager"
...
